--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,7 @@ crashlytics-build.properties
 
 # End of https://www.gitignore.io/api/unity
 
-//
+# Other stuff to ignore.
 .DS_Store
 .collabignore
 .vscode
